--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 The history of Indian food begins with the Indus Valley Civilization. The ancient cooking methods like using clay ovens as well as spices-infused cooking, laid the stage of what would become a variety of cuisines. Ayurveda, an ancient Indian science of life also played an important role in the development of dietary practices and emphasized the balance of the flavors and the medicinal qualities of food.
 <br></br>
 <hr></hr>
-<img src="C:\Users\pc\Desktop\pic\pic4.jpg"></img>
+<img src="https://github.com/vishaka864/Pic4/blob/main/pic4.jpg?raw=true/pic4.jpg"></img>
 <img src="C:\Users\pc\Desktop\pic\pic2.jpg"></img>
 <img src="C:\Users\pc\Desktop\pic\pic3.jpg"></img>
 <a href="https://www.google.com/">ReadMore</a>
