--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@ The history of Indian food begins with the Indus Valley Civilization. The ancien
 <br></br>
 <hr></hr>
 <img src="https://github.com/vishaka864/Pic4/blob/main/pic4.jpg?raw=true/pic4.jpg"></img>
-<img src="C:\Users\pc\Desktop\pic\pic2.jpg"></img>
+<img src="https://github.com/vishaka864/pic2/blob/main/pic2.jpg?raw=true\pic2.jpg"></img>
 <img src="C:\Users\pc\Desktop\pic\pic3.jpg"></img>
 <a href="https://www.google.com/">ReadMore</a>
 </head>
